correcting spacing for fancy

--- a/main/static/css/boozicorns.css
+++ b/main/static/css/boozicorns.css
@@ -299,6 +299,10 @@ label {
     color: #000000
 }
 
+#low-price {
+    margin-bottom: 0;
+}
+
 /*.store-dive {
     font-size: 1vw;
     display: none;
